--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+click==6.6
 Flask==0.10.1
 Flask-HTTPAuth==3.1.2
 Flask-SQLAlchemy==2.1
@@ -11,6 +12,7 @@ pep8==1.7.0
 psycopg2==2.6.2
 python-dateutil==2.5.3
 pytz==2016.4
+requests==2.10.0
 scikit-learn==0.17.1
 scipy==0.17.0
 six==1.10.0
